# scan-pipeline

./: .gitignore  README.md  home_refinance_plan.json  home_refinance_rename.py  pyproject.toml  scan_workflow.py
app/: __init__.py  backfill_reorganize.py  coordinator.py  index_manager.py  logging_config.py  move_helper.py  pipeline.py  safe_move.py  settings.py  sidecar.py  utils.py
app/classify/: config.py  corrections.py  engine.py  llm_fallback.py
app/duplicates/: __init__.py  index.py
app/extractors/: __init__.py  common.py  docx.py  images.py  pdf.py  quality.py  xlsx.py
app/notifications/: __init__.py  render.py
app/state/: scan_db.py  store.py
app/watcher/: __init__.py  bridge.py
config/: file_types.yaml  llm.yaml  notifications.yaml  rule_suggestions.yaml  scan_rules.yaml
docs/: PIPELINE_REFERENCE.md  SCANNER_ARCHITECTURE.md
scripts/: batch_backfill.py  cron_scan.py  generate_health_index.py  quick_scan.py  quick_scan_standalone.py  quick_scan_table.py  run_batch.py  run_watcher.py  start-watcher.sh  sync_wiki_to_notion.py  trigger_webhook.py  watcher_daemon.py
state-data/: batches.json  feedback.jsonl  last_batch.json  last_scan_results.json  pending_review.md  proposals.json  scan_analysis_2026-04-22.md  watcher_signal.json
tests/: test_approvals.py  test_config_and_notifications.py  test_state_store.py  test_watcher.py
