[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-pipeline-v3"
version = "0.1.0"
description = "Hook-driven OpenClaw scan pipeline with config-driven classification."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "watchdog>=4.0",
  "Pillow>=10.0",
  "PyMuPDF>=1.24",
  "python-docx>=1.1",
  "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
